Added a reference to an Overleaf blog post.

--- a/main.tex
+++ b/main.tex
@@ -217,13 +217,12 @@
   url           =   {http://luatex.org/},
   langid        =   {english}}
 
-@ONLINE{overleaf16,
-  author        =   {{Overleaf}},
-  year          =   {2016},
-  title         =   {Two great examples of how to use \#markdown with @Overleaf
-                     -- thanks @liantze!},
-  urldate       =   {2016-08-15},
-  url           =   {https://twitter.com/overleaf/status/763395560682364928},
+@ONLINE{overleaf17,
+  author        =   {Lian Tze Lim},
+  year          =   {2017},
+  title         =   {Markdown into \LaTeX{} with Style},
+  urldate       =   {2017-04-28},
+  url           =   {https://www.overleaf.com/blog/501-markdown-into-latex-with-style},
   langid        =   {english}}
 
 @BOOK{downey16,
@@ -878,9 +877,9 @@ The \texttt{markdown.tex} package
   * The syntax extensions were backported to Lunamark and merged by MacFarlane,
     resulting in a new minor version release of the library (0.5.0).
     [@novotny16-3]
-  * The package was featured on the twitter profile of Overleaf -- a major
-    online service for preparing \LaTeX{} documents -- along with original
-    example documents. [@overleaf16]
+  * The package was featured on the twitter profile and the blog of Overleaf --
+    a major online service for preparing \LaTeX{} documents -- along with
+    original example documents. [@overleaf17]
 
 \end{frame}
 
