Added an example.

--- a/main.tex
+++ b/main.tex
@@ -825,12 +825,12 @@ else
 #### Syntax Extensions -- `\markdownSetup{contentBlocks}` II
 
 ```
-/Scientists.csv (Great Minds of the 19th century)
+/Scientists.csv (Great Minds of the 19th Century)
 ```
 
 \vfill
 
-/Scientists.csv (Great Minds of the 19th century)
+/Scientists.csv (Great Minds of the 19th Century)
 
 
 \end{frame}
