Added a couple of cons to the conclusions.

--- a/main.tex
+++ b/main.tex
@@ -1159,6 +1159,9 @@ The \texttt{markdown.tex} package
   * The package was featured on the twitter profile and the blog of Overleaf --
     a major online service for preparing \LaTeX{} documents -- along with
     original example documents. [@overleaf17]
+  * \TeX\ comments in hybrid code behave in an unexpected way.
+  * Logging should be improved, so that programs such as \texttt{latexmk}
+    can automatically remove cache files that are no longer needed.
 
 \end{frame}
 
